refactor(core): use instanceof patterns, List.of and Files.readString
why: the configuration tree navigators still used cast-after-instanceof and
Arrays.asList; file reads went through commons-io with a default charset.

what: apply instanceof pattern variables in getKeysRecursive,
extractConfiguration and setObjectRecursive; switch split2List to List.of;
replace FileUtils.readFileToString with Files.readString (UTF-8) in
ConfigParser and TransformerUtil; use pattern variables for the YAML
top-level dispatch.

impact: identical behavior; fewer casts and two fewer commons-io call sites;
file reads now use UTF-8 explicitly instead of the platform default charset.